--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "http": "0.0.0",
     "mongodb": "^3.1.6",
+    "mongoose": "^5.2.18",
     "spotify-web-api-node": "^4.0.0"
   }
 }
