--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/service-worker": "^6.1.0",
     "core-js": "^2.5.4",
     "ng-zorro-antd": "^1.4.1",
+    "ngx-cookie-service": "^1.0.10",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
